--- a/Institution/Views/Home/Details.cshtml
+++ b/Institution/Views/Home/Details.cshtml
@@ -5,78 +5,79 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
 
-<div>
-    <h4>Student</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
+<h3>Student Details</h3>
+<hr />
 
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
+<table>
+    <tr>
+        <td>
+            <div>
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.FirstName)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.FirstName)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.LastName)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FatherName)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.LastName)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.FatherName)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.FatherName)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MotherName)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.FatherName)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.MotherName)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.MotherName)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DOB)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.MotherName)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.DOB)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DOB)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DOB)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Phone)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Email)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Phone)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Phone)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Phone)
+                    </dd>
+                </dl>
+            </div>
+        </td>
+        <td>
+            <img src="@Model.ImageUrl" alt="Student Image" height="200px" width="200px" />
+        </td>
+    </tr>
+</table>
 
-        <dd>
-            @Html.DisplayFor(model => model.ImageUrl)
-        </dd>
-
-    </dl>
-</div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.StudentId }) |
     @Html.ActionLink("Back to List", "Index")
