--- a/Institution/Views/Home/Create.cshtml
+++ b/Institution/Views/Home/Create.cshtml
@@ -34,6 +34,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Institution.Models.CommonProperties.Gender.Male :   @Html.RadioButtonFor(m => m.Gender, @Institution.Models.CommonProperties.Gender.Male)
+                @Institution.Models.CommonProperties.Gender.Female :   @Html.RadioButtonFor(m => m.Gender, @Institution.Models.CommonProperties.Gender.Female)
+                @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(model => model.FatherName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FatherName, new { htmlAttributes = new { @class = "form-control" } })
@@ -52,7 +60,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DOB, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DOB, new { htmlAttributes = new { @class = "form-control", @type = "date", @picker = "true" } })
+                @Html.EditorFor(model => model.DOB, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DOB, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -77,10 +85,13 @@
             @Html.LabelFor(model => model.ImageUpload, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @*@Html.TextBoxFor(model => model.ImageUpload, new { htmlAttributes = new { @class = "form-control", @type = "file" } })*@
-                @Html.TextBoxFor(model => model.ImageUpload, new { type = "file", @class = "form-control", })
+                @Html.TextBoxFor(model => model.ImageUpload, new { type = "file", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ImageUpload, "", new { @class = "text-danger" })
+                <img src="@Model.ImageUrl" id="SelectedImage" alt="Student Image" height="200px" width="200px" />
             </div>
         </div>
+
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -97,3 +108,10 @@
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#ImageUpload').change(function (event) {
+            $('#SelectedImage').attr('src', URL.createObjectURL(event.target.files[0]));
+        });
+    });
+</script>
