--- a/Institution/Views/Home/Details.cshtml
+++ b/Institution/Views/Home/Details.cshtml
@@ -29,7 +29,13 @@
                     <dd>
                         @Html.DisplayFor(model => model.LastName)
                     </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Gender)
+                    </dt>
 
+                    <dd>
+                        @Html.DisplayFor(model => model.Gender)
+                    </dd>
                     <dt>
                         @Html.DisplayNameFor(model => model.FatherName)
                     </dt>
